--- a/templates/photo/photo_index.html
+++ b/templates/photo/photo_index.html
@@ -22,8 +22,8 @@
     <div class="col-md-12">
         <div class="panel">
             <div class="panel-heading">
-<!--                <form action="/base/photo_upload/" method="POST" enctype="multipart/form-data">-->
-                <form action=" " method="POST" enctype="multipart/form-data">
+                <form action="/base/photo_upload/" method="POST" enctype="multipart/form-data">
+<!--                <form action=" " method="POST" enctype="multipart/form-data">-->
 
                 {% csrf_token %}
                     <p>
@@ -42,11 +42,13 @@
                         </select>
                     </div>
                     <p>
-<!--                    <input type="submit" value="提交"/>-->
-                        <button  id="bt_submit">提交</button> |
-                        <button  id="bt_search">分类查询</button>
+                    <input type="submit" value="提交"/>
+<!--                        <button  id="bt_submit">提交</button> |-->
+                        <a href="/base/photo_filter?photo_category_id={{ pcl.cate_id }}" id="bt_search">分类查询</a>
+
                     </p>
-                    </p></form>
+                    </p>
+                </form>
             </div>
             <div class="panel-body">
                 <table class="table table-bordered">
