--- a/templates/photo/photo_index1.html
+++ b/templates/photo/photo_index1.html
@@ -1,19 +1,24 @@
 {% extends "../base.html" %}
 
 {% block crumbs %}
-    <div class="row">
-        <div class="col-md-12">
-            <ol class="breadcrumb">
-                <li>
-<!--                    <a href="/index">主页</a>-->
-                </li>
-                <li class="active">
-                    <a class="this-page">图片管理</a>
-                </li>
-            </ol>
+<title>Bootstrap 模板</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- 引入 Bootstrap -->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-        </div>
-    </div>
+<!-- HTML5 Shiv 和 Respond.js 用于让 IE8 支持 HTML5元素和媒体查询 -->
+<!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+<![endif]-->
+<ul id='myTab' class="nav nav-tabs">
+    <li class="active">
+        <a href="#myTabContent" data-toggle="tab">
+            图片管理列表
+        </a>
+    </li>
+</ul>
 {% endblock %}
 
 {% block body %}
@@ -93,5 +98,9 @@
 {% endblock %}
 
 {% block script %}
+<!-- jQuery (Bootstrap 的 JavaScript 插件需要引入 jQuery) -->
+<script src="https://code.jquery.com/jquery.js"></script>
+<!-- 包括所有已编译的插件 -->
+<script src="js/bootstrap.min.js"></script>
 <script src="/static/js/photo.js"></script>
 {% endblock %}
