1.添加js 2.添加js方法

--- a/templates/base.html
+++ b/templates/base.html
@@ -125,6 +125,7 @@
 
 <script src="/static/vendor/jquery/jquery.min.js"></script>
 <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/static/js/lib/bootstrap-table.min.js"></script>
 <script src="/static/vendor/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 <script src="/static/scripts/klorofil-common.js"></script>
 <script>
