添加图片列表页面

--- a/templates/base.html
+++ b/templates/base.html
@@ -89,6 +89,8 @@
                             <ul class="nav">
                                 <li><a href="/base/photo/" class="">图片首页</a></li>
                                 <li><a href="/base/photo_category/" class="">图片类目</a></li>
+                                <li><a href="/base/photo_table/" class="">图片列表</a></li>
+
                             </ul>
                         </div>
                     </li>
