--- a/templates/base/project/index.html
+++ b/templates/base/project/index.html
@@ -25,6 +25,7 @@
             <div class="panel">
                 <div class="panel-heading">
                    <a href="/base/project_add/" class="btn btn-primary">添加项目</a>
+                    <a href="/base/project_select/" class="btn btn-primary">查询项目</a>
                 </div>
                 <div class="panel-body">
                     <table class="table table-bordered">
